# ClassWhiteBoard

./: CMakeLists.txt  README.md  icons.qrc  mainwindow.cpp  mainwindow.h  墨迹.md  课件.md
core/: penBar.cpp  penBar.h  timerWidget.cpp  timerWidget.h  whiteboardCore.cpp  whiteboardCore.h
